2002-01-22  shawn  <sabetts@vcn.bc.ca>

	* nethack-api.el (nethack-menu-submit): return list pairs
	containing the accelerator and the value.

2002-01-22  Ryan C Yeske  <rcyeske@vcn.bc.ca>

	* nethack-cmd.el (southwest-until-ontop, southwest-until-near):
	Fill in definitions.

	* nethack.el (nethack-assq-delete-all): New function.
	(nethack-propertize): New function.
	(nh-proc): Rename from nh-comint-proc.
	(nethack): Use start-process not make-comint.
	(nh-comint-mode): Remove.
	(nh-filter): Rewrite without comint.
	(nh-send): Rewrite without comint.

	* nethack-api.el (nethack-api-raw-print-bold): Use
	nethack-propertize.
	(nethack-api-update-status, nethack-api-putstr): Likewise.
	(nethack-api-add-menu): Add nethack attributes.
	(nethack-api-destroy-nhwindow): Use nethack-assq-delete-all.

2002-01-22  shawn  <sabetts@vcn.bc.ca>

	* nethack-keys.el (nethack-accelerator-chars): add ?* to the
	vector.

	* nethack-api.el (nethack-api-choose-role): remove function
	(nethack-api-choose-race): likewise
	(nethack-api-choose-gender): likewise
	(nethack-api-choose-alignment): likewise
	(nethack-menu-toggle-item): adjust item regexp to include ?*
	(nethack-menu-toggle-all-items): likewise
	(nethack-menu-goto-next): likewise
	(nethack-menu-goto-prev): likewise
	(nethack-menu-submit): likewise
	(nethack-menu-cancel): likewise

2002-01-21  Ryan C Yeske  <rcyeske@vcn.bc.ca>

	* nethack-api.el (nethack-menu): Remove variable.
	(nethack-menu-toggle-item, nethack-menu-toggle-all-items)
	(nethack-menu-goto-next, nethack-menu-goto-prev)
	(nethack-menu-submit, nethack-menu-cancel)
	(nethack-api-start-menu, nethack-api-add-menu)
	(nethack-api-end-menu): Rewrite to remove ewoc dependancy.
	(nethack-api-add-menu): Add tile argument.

	* nethack.el (nethack): Don't setq nethack-menu.

	* nethack-api.el (ewoc): Remove require.
	(nethack-menu-item-print): Remove function.

2002-01-20  Ryan C Yeske  <rcyeske@vcn.bc.ca>

	* nethack-keys.el: Add bindings for remaining functions.
