@@ -2,6 +2,7 @@
 
 	* nethack-api.el (nethack-menu-submit): return list pairs
 	containing the accelerator and the value.
+	(nethack-api-add-menu): remove identifier parameter.
 
 2002-01-22  Ryan C Yeske  <rcyeske@vcn.bc.ca>
 
